2009-12-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): *-33

	* R/Ops.R (Compare<Csp><Csp>): fix case with NA x.

	* R/not.R: fix "typo" in !<sparseVector>

	* R/Ops.R (Ops.spV.spV): fix thinko

2009-12-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R: setAs(nsparseV*, lsparseV*) etc

	* R/Ops.R (Ops.spM.spV, Ops.spV.spM): sparseVec. o sparseMat.

2009-11-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Ops.spV.spV): enable sparseVector operations in more cases.

	* R/sparseVector.R (is.na): methods defined.
	* R/sparseVector.R (intIv): also accept "sparseVector"s

	* tests/Simple.R: check the above

2009-11-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (newSpV, newSpVec): new utility, dropping 0 "on the fly".
	* R/sparseVector.R (atomic -> sparse*): fix for NA case.

	* R/Ops.R (<spV>): using newSpVec()

	* R/not.R: fix thinko in !<sparseVector>

2009-11-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/other-pkgs.R: detach(*, unload) Rgraphviz too

2009-11-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R: "abIndex" (and "rleDiff") class
	* R/abIndex.R: with some methods; commit these finally, even if
	it's mostly unfinished.
	* src/abIndex.[ch]: new: currently only for .Call(Matrix_int_rle,*)
	* tests/abIndex-tsts.R: basic consistency checks for "abIndex".

	* R/diagMatrix.R (diagOdiag): "exploding" Matrix.msg() only level 2;
	* tests/indexing.Rout.save: update

2009-11-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-32, CRAN-released:

	* src/Csparse.c (Csparse_Csparse_prod, Csparse_Csparse_crossprod):
	PROTECT(.) the dimnames; thanks to Kaspar Kristensen

2009-10-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Logic.lCMat): to be used for lsC* and ltC* as well,
	effectively replacing previous suboptimal methods.

	* src/chm_common.c (chm2Ralloc): Fix unidiagonal ntC segfault: