@@ -209,5 +209,3 @@
   line in tests/indexing.R uses very large objects unnecessarily;
   Improve  replTmat()  in R/Tsparse.R, making use of new "abIndex"
   vectors.
-
-- <sparseMatrix>  op  <sparseVector>  is desirable to work
